# sandtetris

./: .gitignore  CMakeLists.txt  README.md
include/: block.h  blocks.h  colors.h  config.h  grid.h  mainPageUI.hpp  position.h
include/sandPhysics/: addSand.h  sandColor.h  sandConfig.h  sandPhysics.h  sandgrid.h
src/: block.cpp  blocks.cpp  colors.cpp  grid.cpp  main.cpp  mainPageUI.cpp  position.cpp
src/sandPhysics/: addSand.cpp  sandPhysics.cpp  sandcolors.cpp  sandgrid.cpp
